# silero-vad

./: CMakeLists.txt
cmake/: Riscv64.cmake
examples/cpp/: silero-vad-onnx.cpp  silero-vad.cpp
